--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
-    <a class="naroci" routerLink="/">Naroči</a>
-    <a class="narocila" routerLink="/seznam">Seznam naročil</a>
-    <a class="dostavljalci" routerLink="/dostavljalci">Dostavljalci</a>
-    <div class="logo">Dostava</div>
-    <i class="fa-sharp fa-solid fa-truck"></i>
+  <a class="naroci" routerLink="/">Naroči</a>
+  <a class="narocila" routerLink="/seznam">Seznam naročil</a>
+  <a class="dostavljalci" routerLink="/dostavljalci">Dostavljalci</a>
+  <fa-icon [icon]="faBurger" class="faBurger logo"></fa-icon>
+  <i class="fa-sharp fa-solid fa-truck"></i>
 </div>
