--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -17,7 +17,7 @@
 
 .logo {
     margin-left: auto; 
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 a {
@@ -28,3 +28,6 @@ a {
     cursor: pointer;
 }
 
+.faBurger {
+    font-size: 2rem;
+}
