--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -1,3 +1,8 @@
+h3 {
+    text-align: center;
+    padding: 10px;
+}
+
 .narocilo-items {
     display: flex;
     align-items: center;
@@ -19,10 +24,21 @@
     transform: translate(-50%, -50%);
 }
 
+.ime {
+    display: flex;
+}
+
+#ime {
+    padding-right: 5px;
+}
+
 .narocilo-cas {
     align-items: center;
+    justify-content: center;
     position: absolute;
     left: 70%;
+    top: 50%;
+    transform: translate(0,-50%);
 }
 
 .list-container {
